--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ПР 3</title>
+  <title>Путешествия по России</title>
   <link rel="stylesheet" href="pages/index.css">
 </head>
 
@@ -40,11 +40,11 @@
           мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
           стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li><span class="intro__font intro__list_style_bold">Часовых поясов </span>11</li>
-          <li><span class="intro__font intro__list_style_bold">Объектов природного наследия ЮНЕСКО </span>12</li>
-          <li><span class="intro__font intro__list_style_bold">Объектов культурного наследия ЮНЕСКО </span>16</li>
-          <li><span class="intro__font intro__list_style_bold">Природных заповедников </span>105</li>
-          <li><span class="intro__font intro__list_style_bold"> Аэропортов </span>241</li>
+          <li><span class="intro__list intro__list_style_bold">Часовых поясов </span>11</li>
+          <li><span class="intro__list intro__list_style_bold">Объектов природного наследия ЮНЕСКО </span>12</li>
+          <li><span class="intro__list intro__list_style_bold">Объектов культурного наследия ЮНЕСКО </span>16</li>
+          <li><span class="intro__list intro__list_style_bold">Природных заповедников </span>105</li>
+          <li><span class="intro__list intro__list_style_bold"> Аэропортов </span>241</li>
         </ul>
       </section>
 
