--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <img src="images/__logo.svg" alt="Флаг РФ" class="header__logo">
       <div class="header__links">
-        <a href="#" target="blank" class="header__link">Ru</a>
+        <a href="#" target="blank" class="header__link header__link_active">Ru</a>
         <a href="#" target="blank" class="header__link">En</a>
       </div>
     </header>
@@ -21,7 +21,7 @@
     <main class="content">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
-        <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <img src="images/__image.png" alt="Карта" class="lead__image">
         <p class="lead__caption">
           ваша полка — верхняя
@@ -29,8 +29,8 @@
       </section>
 
       <section class="intro">
-        <h3 class="intro__title">Чего мы там не видели?</h3>
-        <p class="intro__subtitle">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <p class="intro__paragraph">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
           вселенная
           с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты
@@ -40,11 +40,11 @@
           мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной
           стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li><span class="intro__list intro__list_style_bold">Часовых поясов </span>11</li>
-          <li><span class="intro__list intro__list_style_bold">Объектов природного наследия ЮНЕСКО </span>12</li>
-          <li><span class="intro__list intro__list_style_bold">Объектов культурного наследия ЮНЕСКО </span>16</li>
-          <li><span class="intro__list intro__list_style_bold">Природных заповедников </span>105</li>
-          <li><span class="intro__list intro__list_style_bold"> Аэропортов </span>241</li>
+          <li class="intro__fact"><span class="intro__span-accent">Часовых поясов </span>11</li>
+          <li class="intro__fact"><span class="intro__span-accent">Объектов природного наследия ЮНЕСКО </span>12</li>
+          <li class="intro__fact"><span class="intro__span-accent">Объектов культурного наследия ЮНЕСКО </span>16</li>
+          <li class="intro__fact"><span class="intro__span-accent">Природных заповедников </span>105</li>
+          <li class="intro__fact"><span class="intro__span-accent"> Аэропортов </span>241</li>
         </ul>
       </section>
 
@@ -201,7 +201,7 @@
 
       <section class="cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="blank" class="cover__link">
-          <h3 class="cover__title">До Байкала «на собаках»</h3>
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.</p>
         </a>
@@ -209,16 +209,17 @@
     </main>
 
     <footer class="footer">
-      <div class="footer__links">
+      <nav class="footer__links">
         <a href="https://yandex.ru/maps" target="blank" class="footer__link">Карты</a>
         <a href="https://yandex.ru/pogoda" target="blank" class="footer__link">Погода</a>
         <a href="https://rasp.yandex.ru" target="blank" class="footer__link">Расписание</a>
         <a href="https://calendar.yandex.ru" target="blank" class="footer__link">Календарь</a>
         <a href="https://travel.yandex.ru" target="blank" class="footer__link">Путешествия</a>
-      </div>
+      </nav>
       <a href="https://www.instagram.com/dreusus" target="blank" class="footer__copyright">© 2021 Dreusus</a>
     </footer>
 
   </div>
-  </body>
+</body>
+
 </html>
